--- a/src/viewsposLogin/createChannel/index.html
+++ b/src/viewsposLogin/createChannel/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>CreateChannel</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="http://localhost:3030/cssposLogin/createchannel/index.css" rel="stylesheet" type="text/css"/>
 </head>
