--- a/src/viewsposLogin/home/index.html
+++ b/src/viewsposLogin/home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Impusic</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="/cssposLogin/home/index.css" rel="stylesheet" type="text/css"/>
     
